Tower Hanoi calculate steps to transfer from A to C pegs using B  with recursion